--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -14,7 +14,7 @@ spring:
           naver:
             client-id: ${NAVER_CLIENT_ID}
             client-secret: ${NAVER_CLIENT_SECRET}
-            redirect-uri: '{baseUrl}/login/oauth2/code/naver'
+            redirect-uri: http://crew-station.store/login/oauth2/code/naver
             authorization-grant-type: authorization_code
             scope: name, email, profile_image
 
